# fieldtrip-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create-tag.yml  publish-release.yml  run_unit_tests.yml
.mpython/: wrap_project.m
.mpython/templates/: class_header.py  docstring.py
fieldtrip/: __init__.py  _align_ijk2xyz.py  _align_presentation.py  _align_xyz2ijk.py  _alpha_taper.py  _append_common.py  _artifact2boolvec.py  _artifact2event.py  _artifact2trl.py  _artifact_level.py  _atlas_lookup.py  _avgref.py  _bandpassfilter.py  _bandstopfilter.py  _bg_rgba2rgb.py  _binomialprob.py  _bivariate_common.py  _blc.py  _blockindx2cmbindx.py  _boolvec2artifact.py  _boolvec2event.py  _boolvec2trl.py  _browse_audiovideo.py  _browse_movieplotER.py  _browse_multiplotER.py  _browse_simpleFFT.py  _browse_topoplotER.py  _browse_topoplotVAR.py  _bsscca.py  _cellStruct2StructCell.py  _channelconnectivity.py  _channelposition.py  _chanscale_common.py  _checkchan.py  _checkfreq.py  _checkpos.py  _checktime.py  _closedf.py  _clusterstat.py  _colorspec2rgb.py  (+436 more)
fieldtrip/__connectivity/: _blockwise_conditionalgranger.py  _coeffs2iis.py  _ctranspose2x2.py  _ctranspose3x3.py  _defaultId.py  _det2x2.py  _det3x3.py  _fixname.py  _ft_debug.py  _ft_error.py  _ft_getopt.py  _ft_info.py  _ft_notice.py  _ft_notification.py  _ft_platform_supports.py  _ft_progress.py  _ft_version.py  _ft_warning.py  _getsubfield.py  _inv2x2.py  _inv3x3.py  _istrue.py  (+28 more)
tests/: test_array.py  test_cell.py  test_implicit.py  test_matlab_class.py  test_runtime.py  test_struct.py  test_structarray.py
(+1234 files in other folders)
